<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Quick Circle Notifications</string>
	<string name="app_last_updated">January 16, 2015</string>
	<string name="app_developer">Zsolt Mester</string>

	<string name="contact_change_log">CHANGES</string>
	<string name="contact_changes_link">https://github.com/zsoltmester/qcn/blob/master/CHANGES.md</string>
	<string name="contact_rate_btn_title">RATE</string>
	<string name="contact_rate_link">https://play.google.com/store/apps/details?id=zsoltmester.qcn</string>
	<string name="contact_email">EMAIL</string>
	<string name="contact_my_email">zsolt.mester67@gmail.com</string>
	<string name="contact_github">GITHUB</string>
	<string name="contact_source_link">https://github.com/zsoltmester/qcn</string>
	<!--<string name="contact_readme">README</string>-->


	<!-- Translatable strings-->

	<string name="contact_last_updated">Last Updated</string>
	<string name="contact_rate_upper_text">Rate it for 5 stars!</string>
	<string name="contact_rate_lower_text">Do you like this app?</string>
	<string name="contact_email_chooser_title">Send email…</string>
	<string name="contact_developer">Developer</string>
	<string name="contact_open_source">This is an open source application.</string>
	<!--<string name="contact_issues">Tell me your ideas or report bugs!</string>-->

	<string name="error_no_permission_for_access_notifications">
		Open the case for enable notification access for this app!
	</string>
	<string name="error_no_permission_for_lock_the_screen">
		Open the case for enable to lock the screen for this app!
	</string>

</resources>
