<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="@dimen/desktop_margin_vertical"
	android:layout_marginBottom="@dimen/desktop_margin_vertical"
	android:layout_marginLeft="@dimen/desktop_margin_horizontal"
	android:layout_marginRight="@dimen/desktop_margin_horizontal">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/desktop_margin_vertical"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/subhead"
					android:textSize="@dimen/desktop_subhead_size"
					android:text="@string/app_last_updated" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/caption"
					android:textSize="@dimen/desktop_caption_size"
					android:text="@string/contact_last_updated" />

			</LinearLayout>

			<Button
				android:id="@+id/changes_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/desktop_margin_horizontal"
				android:textColor="@color/btn_text"
				android:text="@string/contact_change_log" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/desktop_margin_vertical"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/subhead"
					android:textSize="@dimen/desktop_subhead_size"
					android:text="@string/contact_rate_upper_text" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/caption"
					android:textSize="@dimen/desktop_caption_size"
					android:text="@string/contact_rate_lower_text" />

			</LinearLayout>

			<Button
				android:id="@+id/rate_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/desktop_margin_horizontal"
				android:textColor="@color/btn_text"
				android:text="@string/contact_rate_btn_title" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/desktop_margin_vertical"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/subhead"
					android:textSize="@dimen/desktop_subhead_size"
					android:text="@string/app_developer" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/caption"
					android:textSize="@dimen/desktop_caption_size"
					android:text="@string/contact_developer" />

			</LinearLayout>

			<Button
				android:id="@+id/email_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/btn_text"
				android:layout_marginStart="@dimen/desktop_margin_horizontal"
				android:text="@string/contact_email" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/desktop_margin_vertical"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center_vertical"
				android:orientation="vertical">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/subhead"
					android:textSize="@dimen/desktop_subhead_size"
					android:text="@string/contact_open_source_upper_text" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/caption"
					android:textSize="@dimen/desktop_caption_size"
					android:text="@string/contact_open_source_lower_text" />

			</LinearLayout>

			<Button
				android:id="@+id/source_code_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/btn_text"
				android:layout_marginStart="@dimen/desktop_margin_horizontal"
				android:text="@string/contact_github" />

		</LinearLayout>

	</LinearLayout>
	
</ScrollView>